issues: fix tree view gfx crop top gap out re: #679

--- a/github-dark.css
+++ b/github-dark.css
@@ -3447,10 +3447,11 @@
   }
   /* network members */
   .network-tree {
-    width: 26px !important;
+    width: 19px !important;
     height: 0 !important;
     padding-top: 26px !important;
     background-repeat: no-repeat !important;
+    background-position: -2px center !important;
   }
   .network-tree[src$="t.png"] {
     background-image: url("data:image/gif;base64,R0lGODlhFAAaAIAAAMzMzP///yH5BAEAAAEALAAAAAAUABoAAAIkjI+pG8APY5O0uorfzRzt3n1g5pSTOTJiSq1s5L6ajMW0YgcFADs=") !important;
